--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,34 +1,83 @@
 ---
 layout: default
 ---
-{% if page.date %}<div class="postdate">Posted on {{ page.date | date_to_string }}{% if page.last_updated %}, last updated on {{ page.last_updated | date_to_string }}{% endif %}</div>{% endif %}
-
-<div class="post">
-{{ content }}
+<ul class="post-list clearfix">
+<li class="post-item clearfix">
+<div class="title-block">
+	<h5 class="comments"> 
+		<aside class="p_responses light"> 
+		<a href="{{ page.url }}#disqus_thread">0</a> 
+		</aside> 
+	</h5>
+	<h5 class="date">{{ page.date | date_to_string }}</h5>
+	<h3 class="title" id="posttitle_51441582"><a href="{{ page.url }}">{{ page.title }}</a></h3>
 </div>
- 
+<div class="post-content" id="postbox_51441582">
+	<div class="copy" id="post_51441582">
+		{{ content }}
+	</div>
+	<ul class="social">
+		<li class="retweet-button">
+		<div class="posterous_tweet_button posterous_horizontal_count"> 
+			<a href="http://twitter.com/share" class="posterous_tweet_button twitter-share-button"
+				data-url="{{ page.url }}"
+				data-via="tedkulp"
+				data-text="{{ page.title }}"
+				data-count="none"
+				data-lang="en">Tweet</a> 
+			<!--
+			<script type="text/javascript">
+				var tweetcount_url = '{{ page.url }}';
+				var tweetcount_size = 'small';
+				</script>
+				<script type="text/javascript" src="http://widgets.backtype.com/tweetcount.js"></script>
+				-->
+			</div> 
+			</li>
+			<li class="like-button">
+			<div class="posterous_retweet_widget">
+				<fb:like href="{{ page.url }}" layout="button_count"></fb:like>
+			</div>
+			</li>
+		</ul>
+	</div>
+<aside class="p_responses light"> 
+</aside>
+
 <div id="related">
   <h2>Related Posts</h2>
-  <ul class="posts">
+  <ul class="posts" style="list-style-type: none;">
     {% for post in site.related_posts limit:5 %}
-      <li><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li style="list-style-type: none;"><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
 
 {% if site.disqus %}
 <div id="comments">
-  <h2>Comments</h2>
-  <div id="disqus_thread"></div>
-  <script type="text/javascript">
-    var disqus_identifier = "{{ page.url }}";
-    (function() {
-     var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-     dsq.src = 'http://{{ site.disqus.id }}.disqus.com/embed.js';
-     (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-    })();
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
-  <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-{% endif %}
+	<h2>Comments</h2>
+	<div id="disqus_thread"></div>
+	<script type="text/javascript">
+	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+	var disqus_shortname = '{{ site.disqus.id }}'; // required: replace example with your forum shortname
+	var disqus_title = '{{ post.title }}'
+	var disqus_developer = 1;
+
+	// The following are highly recommended additional parameters. Remove the slashes in front to use.
+	// var disqus_identifier = 'unique_dynamic_id_1234';
+	var disqus_url = '{{ post.url }}';
+
+	/* * * DON'T EDIT BELOW THIS LINE * * */
+	(function() {
+	 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+	 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+	 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+	 })();
+	</script>
+	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
+	<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
 </div>
+{% endif %}
+
+</li>
+</ul>
