--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -4,7 +4,7 @@ description: A description about my blog homepage
 ---
 
 <ul class="post-list clearfix">
-	{% for post in site.posts limit: 10 %}
+	{% for post in page.posts %}
 	<li class="post-item clearfix">
 		<div class="title-block">
 			<h5 class="comments"> 
