--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -62,12 +62,12 @@ layout: default
 	<script type="text/javascript">
 	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
 	var disqus_shortname = '{{ site.disqus.id }}'; // required: replace example with your forum shortname
-	var disqus_title = '{{ post.title }}'
+	var disqus_title = '{{ page.title }}'
 	var disqus_developer = 1;
 
 	// The following are highly recommended additional parameters. Remove the slashes in front to use.
 	// var disqus_identifier = 'unique_dynamic_id_1234';
-	var disqus_url = '{{ post.full_url }}';
+	var disqus_url = '{{ page.full_url }}';
 
 	/* * * DON'T EDIT BELOW THIS LINE * * */
 	(function() {
