--- a/themes/choice/post-style.css
+++ b/themes/choice/post-style.css
@@ -167,7 +167,7 @@ p.site-description{font-size: 15px; width: 520px; line-height: 1.4em; color: #99
 
 	/*-------------------------*/
 	/*- SOCIAL ----------------*/
-	.social{padding: 10px; overflow: auto; background: #fff; list-style: none !important;
+	.social{padding: 3px; overflow: auto; background: #fff; list-style: none !important;
 					-moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 					-webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 					box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);}
@@ -176,7 +176,7 @@ p.site-description{font-size: 15px; width: 520px; line-height: 1.4em; color: #99
 			.social li.views{font-family: "Droid Serif", Georgia, "Times New Roman", Times, serif; font-size: 11px;}
 				.social li.views div{display: inline; margin-right: 2px;}
 			.social li iframe{float: left;}
-			.posterous_retweet_widget{height: 24px; overflow: hidden; padding: 0px !important; margin: 0px !important;}
+			.posterous_retweet_widget{overflow: hidden; padding: 0px !important; margin: 0px !important;}
 
 
 	/*-------------------------*/
