--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
-<html xmlns:fb="http://www.facebook.com/2008/fbml" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="chrome=1" />
 		<meta name="width" content="500" />
 		<meta name="generator" content="Posterous" />
 		<link href="/bundles/posts.css" media="screen" rel="stylesheet" type="text/css" />
 		<!--[if lt IE 9]>
-		<link href="/bundles/ie.css" media="screen" rel="stylesheet" type="text/css" />
+      <link href="/bundles/ie.css" media="screen" rel="stylesheet" type="text/css" />
 		<![endif]-->  
 		<link rel="alternate" type="application/rss+xml" href="http://feeds.feedburner.com/tedkulp" />
 		<meta name="medium" content="blog" />
 		<link rel="image_src" href="http://files.posterous.com/user_profile_pics/509939/2214550.jpg" />
-		<!-- <script type="text/javascript" src="http://use.typekit.com/.js"></script><script type="text/javascript">try{Typekit.load();}catch(e){}</script> -->
 		<!--[if lt IE 9]>
-		<script src="/javascripts/html5.js" type="text/javascript"></script>
-		<script src="/javascripts/innershiv.js" type="text/javascript"></script>
+      <script src="/javascripts/html5.js" type="text/javascript"></script>
+      <script src="/javascripts/innershiv.js" type="text/javascript"></script>
 		<![endif]-->
 		<link rel="canonical" href="http://tedkulp.com" />
 		<link href="/themes/choice/post-style.css" rel="stylesheet" type="text/css" />
 		<!--[if lte IE 8]>
-		<link href="/themes/choice/ie-style.css" rel="stylesheet" type="text/css" />
+      <link href="/themes/choice/ie-style.css" rel="stylesheet" type="text/css" />
 		<![endif]-->
-		<script src="http://connect.facebook.net/en_US/all.js#xfbml=1"></script>
 		{% if site.feedburner %}
 		<link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
 		{% endif %}
@@ -140,7 +138,6 @@
 		</div>
 
 		<script src="/bundles/sites.js?1304205459" type="text/javascript"></script> 
-		<script type="text/javascript" src="http://platform.twitter.com/widgets.js" defer></script>
 		{% if site.disqus %}
 		<script type="text/javascript">
 			/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
