--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,67 +1,53 @@
 ---
 layout: default
 ---
-<ul class="post-list clearfix">
-<li class="post-item clearfix">
-<div class="title-block">
-	<h5 class="comments"> 
-		<aside class="p_responses light"> 
-		<a href="{{ page.full_url }}#disqus_thread">0</a> 
-		</aside> 
-	</h5>
-	<h5 class="date">{{ page.date | date_to_string }}</h5>
-	<h3 class="title" id="posttitle_51441582"><a href="{{ page.url }}">{{ page.title }}</a></h3>
-</div>
-<div class="post-content" id="postbox_51441582">
-	<div class="copy" id="post_51441582">
-		{{ content }}
-	</div>
-	<ul class="social">
-		<li class="retweet-button">
-    <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ page.full_url }}" data-text="{{ page.title }}" data-count="horizontal" data-lang="en">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> 
+<div class="post">
+  <div class="title-block">
+    <!--
+    <h5 class="comments"> 
+      <aside class="p_responses light"> 
+      <a href="{{ page.full_url }}#disqus_thread">0</a> 
+      </aside> 
+    </h5>
+    -->
+    <h3 class="title" id="posttitle_51441582"><a href="{{ page.url }}">{{ page.title }}</a></h3>
+    <p class="date">Posted: {{ page.date | date_to_string }}</p>
+  </div>
+  <div class="post-content">
+    <div class="copy">
+      {{ content }}
+    </div>
+    <ul class="social">
+      <li class="retweet-button">
+      <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ page.full_url }}" data-text="{{ page.title }}" data-count="horizontal" data-lang="en">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> 
       <iframe src="http://www.facebook.com/plugins/like.php?href={{ page.full_url }}&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:85px; height:21px;" allowTransparency="true"></iframe> 
-    </li>
-  </ul>
+      </li>
+    </ul>
+  </div>
+
+  {% if site.disqus %}
+    <div id="comments">
+      <h2>Comments</h2>
+      <div id="disqus_thread"></div>
+      <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+      var disqus_shortname = '{{ site.disqus.id }}'; // required: replace example with your forum shortname
+      var disqus_title = '{{ page.title }}'
+      var disqus_developer = 1;
+
+      // The following are highly recommended additional parameters. Remove the slashes in front to use.
+      // var disqus_identifier = 'unique_dynamic_id_1234';
+      var disqus_url = '{{ page.full_url }}';
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function() {
+       var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+       dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+       })();
+      </script>
+      <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
+      <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+    </div>
+  {% endif %}
 </div>
-<aside class="p_responses light"> 
-</aside>
-
-<!--
-<div id="related">
-  <h2>Related Posts</h2>
-  <ul class="posts" style="list-style-type: none;">
-    {% for post in site.related_posts limit:5 %}
-      <li style="list-style-type: none;"><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
--->
-
-{% if site.disqus %}
-<div id="comments">
-	<h2>Comments</h2>
-	<div id="disqus_thread"></div>
-	<script type="text/javascript">
-	/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-	var disqus_shortname = '{{ site.disqus.id }}'; // required: replace example with your forum shortname
-	var disqus_title = '{{ page.title }}'
-	var disqus_developer = 1;
-
-	// The following are highly recommended additional parameters. Remove the slashes in front to use.
-	// var disqus_identifier = 'unique_dynamic_id_1234';
-	var disqus_url = '{{ page.full_url }}';
-
-	/* * * DON'T EDIT BELOW THIS LINE * * */
-	(function() {
-	 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	 dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-	 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-	 })();
-	</script>
-	<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript={{ site.disqus.id }}">comments powered by Disqus.</a></noscript>
-	<a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
-</div>
-{% endif %}
-
-</li>
-</ul>
