--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -3,48 +3,27 @@ layout: default
 description: A description about my blog homepage
 ---
 
-<ul class="post-list clearfix">
+<div class="post-list">
 	{% for post in page.posts %}
-	<li class="post-item clearfix">
-		<div class="title-block">
-			<h5 class="comments"> 
-				<aside class="p_responses light"> 
-				<a href="{{ post.full_url }}#disqus_thread">0</a> 
-				</aside> 
-			</h5>
-			<h5 class="date">{{ post.date | date_to_string }}</h5>
-			<h3 class="title" id="posttitle_51441582"><a href="{{ post.url }}">{{ post.title }}</a></h3>
-		</div>
-		<div class="post-content" id="postbox_51441582">
-			<div class="copy" id="post_51441582">
-				{{ post.content }}
-			</div>
-      <ul class="social">
-        <li class="retweet-button">
-        <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ post.full_url }}" data-text="{{ post.title }}" data-count="horizontal" data-lang="en">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> 
-          <iframe src="http://www.facebook.com/plugins/like.php?href={{ post.full_url }}&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:85px; height:21px;" allowTransparency="true"></iframe> 
-        </li>
-      </ul>
-		</div>
-		<aside class="p_responses light"> 
-		</aside>
-	</li>
-	{% endfor %}
-</ul>
-
-<!-- <div class="pagination">
-	<span class="disabled prev_page">&laquo; Previous</span> <span class="current">1</span> <a href="http://tedkulp.com?page=2" rel="next">2</a> <a href="http://tedkulp.com?page=3">3</a> <a href="http://tedkulp.com?page=4">4</a> <a href="http://tedkulp.com?page=5">5</a> <a href="http://tedkulp.com?page=6">6</a> <a href="http://tedkulp.com?page=2" class="next_page" rel="next">Next &raquo;</a>
-</div> -->
-
-<!--
-<div id="pages">
-  <h2>Pages</h2>
-  <ul>
-    {% for page in site.html_pages %}
-      {% if page.title %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-      {% endif %}
-    {% endfor %}
-  </ul>
+    <div class="post-item">
+      <div class="post-info">
+        <hr class="separator">
+        <h2 class="title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
+        <p class="more-info">
+        Posted: {{ post.date | date_to_string }}<br />
+        <a href="{{ post.full_url }}#disqus_thread">0</a> Comments
+        </p>
+      </div>
+      <div class="post-content">
+        <hr class="separator">
+        <div class="post-inner-content">
+          {{ post.content }}
+          <div class="social">
+            <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ post.full_url }}" data-text="{{ post.title }}" data-count="horizontal" data-lang="en">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> 
+            <iframe src="http://www.facebook.com/plugins/like.php?href={{ post.full_url }}&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:85px; height:21px;" allowTransparency="true"></iframe> 
+          </div>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
 </div>
--->
