--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -26,6 +26,10 @@ body.bp {
   @include blueprint-interaction;
   // Remove the scaffolding when you're ready to start doing visual design.
   // Or leave it in if you're happy with how blueprint looks out-of-the-box
+  background-color: $page-background-color;
+  a {
+    text-decoration: none;
+  }
 }
 
 // Page layout can be done using mixins applied to your semantic classes and IDs:
@@ -33,43 +37,123 @@ body.bp {
   @include container;
   #header, #footer {
     @include column(24, last);
-    background-color: #2F3035;
+    background-color: $border-background-color;
     h1.site-name {
       padding: 0px;
       margin: 0px 0px 10px;
       font-size: 40px;
       line-height: 40px;
-      font-family: "Lobster", arial, serif;
+      font-family: 'Rock Salt', arial, serif;
       position: relative;
-    }
-    p.site-description {
-      font-size: 15px;
-      width: 520px;
-      line-height: 1.4em;
-      color: #999;
+      a {
+        @include link-colors(#eee, #eee, #eee, #eee, #eee);
+        text-decoration: none;
+      }
     }
   }
   #header {
-    padding: 20px 0px 20px 1em;
+    height: 60px;
+    padding: 20px 0px 30px 20px;
     border-bottom: 1px solid black;
   }
+  #footer {
+    color: #bbb;
+    h4 {
+      color: #eee;
+      font-size: 1.5em;
+      padding-top: 15px;
+      padding-left: 15px;
+      margin-bottom: .5em;
+    }
+    p {
+      padding-left: 15px;
+    }
+    a {
+      @include link-colors(#bbb, $link-color);
+    }
+    #footer-about {
+      @include column(7);
+      @include colborder($border-background-color);
+      ul, li {
+        list-style-type: none;
+      }
+    }
+    #footer-tags {
+      @include column(10);
+      @include colborder($border-background-color);
+    }
+    #footer-archive {
+      @include column(5, true);
+      ul, li {
+        list-style-type: none;
+      }
+    }
+  }
   #content {
-    @include column(17);
-    @include colborder();
-    padding: 1em;
-  }
-  #sidebar {
-    @include column(6, true);
-    ul {
-      // list-style-type: none;
+    .post-item {
+      @include column(24, last);
+      background-color: $content-background-color;
     }
-    #other_pages, #tags, #archive {
-      @include prepend-top();
+    .post-info {
+      @include column(6);
+      @include colborder();
+      text-align: right;
+      line-height: 1em;
+      margin-bottom: .25em;
+      h2.title {
+        line-height: 1em;
+        font-family: 'Six Caps', serif;
+        font-size: 48px;
+        padding-left: span(1);
+        padding-bottom: 10px;
+      }
+      .more-info {
+        line-height: 1.5em;
+        font-size: 90%;
+      }
+      a {
+        @include link_colors(#333, $link-color);
+      }
     }
-  }
-  code {
-    font-size: 12px;
-    font-family: 'Courier New','Terminal',monospace;
-    line-height: 14px;
+    .post-content {
+      @include column(17, true);
+      padding-bottom: .5em;
+      .post-inner-content {
+        margin-right: 1em;
+        #comments {
+          font-size: 90%;
+          a {
+            @include link_colors(#333, $link-color);
+          }
+        }
+      }
+      .social {
+        margin: 10px 0 10px 0;
+        background: #fff;
+        padding: 5px 0 0 5px;
+      }
+    }
+    .pagination {
+      @include column(24, true);
+      background-color: $content-background-color;
+      padding: 10px 0 10px span(7);
+      a {
+        padding-right: 25px;
+      }
+    }
+    .separator {
+      @include colruler();
+    }
+    .highlight {
+      pre {
+        background-color: $border-background-color;
+        color: #eee;
+      }
+    }
+    code {
+      font-size: 12px;
+      font-family: 'Courier New','Terminal',monospace;
+      line-height: 14px;
+    }
   }
 }
