--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -14,7 +14,7 @@
 // configuration applied, uncomment:
 // @include blueprint
 
-//@import "mixins/syntax";
+@import "mixins/syntax";
 
 // If you are doing a lot of stylesheet concatenation, it is suggested
 // that you scope your blueprint styles, so that you can better control
