--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
     <div class="post-content">
       <hr class="separator">
       <div class="post-inner-content">
-        {{ page.content }}
+        {{ content }}
         <div class="social">
           <a href="http://twitter.com/share" class="twitter-share-button" data-url="{{ page.full_url }}" data-text="{{ page.title }}" data-count="horizontal" data-lang="en">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script> 
           <iframe src="http://www.facebook.com/plugins/like.php?href={{ page.full_url }}&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:85px; height:21px;" allowTransparency="true"></iframe> 
