Add overflow to code display

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -152,6 +152,7 @@ body.bp {
     .highlight {
       pre {
         background-color: $border-background-color;
+        overflow: auto;
         color: #eee;
       }
     }
