--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -93,6 +93,23 @@ body.bp {
         list-style-type: none;
       }
     }
+    .tag-cloud {
+      .rank-1 {
+        font-size: 150%;
+      }
+      .rank-2 {
+        font-size: 137%;
+      }
+      .rank-3 {
+        font-size: 125%;
+      }
+      .rank-4 {
+        font-size: 112%;
+      }
+      .rank-5 {
+        font-size: 100%;
+      }
+    }
   }
   #content {
     .post-item {
