--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -52,8 +52,13 @@ a img {
 .highlight {
   /* Comment */
   /* Error */
+  /* Generic */
   /* Keyword */
+  /* Literal */
+  /* Name */
   /* Operator */
+  /* Other */
+  /* Punctuation */
   /* Comment.Multiline */
   /* Comment.Preproc */
   /* Comment.Single */
@@ -74,6 +79,7 @@ a img {
   /* Keyword.Pseudo */
   /* Keyword.Reserved */
   /* Keyword.Type */
+  /* Literal.Date */
   /* Literal.Number */
   /* Literal.String */
   /* Name.Attribute */
@@ -86,6 +92,8 @@ a img {
   /* Name.Function */
   /* Name.Label */
   /* Name.Namespace */
+  /* Name.Other */
+  /* Name.Property */
   /* Name.Tag */
   /* Name.Variable */
   /* Operator.Word */
@@ -111,209 +119,237 @@ a img {
   /* Name.Variable.Instance */
   /* Literal.Number.Integer.Long */
 }
+.highlight pre {
+  background-color: #202020;
+  color: #d0d0d0;
+}
 .highlight .hll {
-  background-color: #ffffcc;
+  background-color: #404040;
 }
 .highlight .c {
-  color: #408080;
+  color: #999999;
   font-style: italic;
 }
 .highlight .err {
-  border: 0 solid #FF0000;
+  color: #a61717;
+  background-color: #e3d2d2;
+}
+.highlight .g {
+  color: #d0d0d0;
 }
 .highlight .k {
-  color: #008000;
+  color: #6ab825;
   font-weight: bold;
 }
+.highlight .l {
+  color: #d0d0d0;
+}
+.highlight .n {
+  color: #d0d0d0;
+}
 .highlight .o {
-  color: #666666;
+  color: #d0d0d0;
+}
+.highlight .x {
+  color: #d0d0d0;
+}
+.highlight .p {
+  color: #d0d0d0;
 }
 .highlight .cm {
-  color: #408080;
+  color: #999999;
   font-style: italic;
 }
 .highlight .cp {
-  color: #BC7A00;
+  color: #cd2828;
+  font-weight: bold;
 }
 .highlight .c1 {
-  color: #408080;
+  color: #999999;
   font-style: italic;
 }
 .highlight .cs {
-  color: #408080;
-  font-style: italic;
+  color: #e50808;
+  font-weight: bold;
+  background-color: #520000;
 }
 .highlight .gd {
-  color: #A00000;
+  color: #d22323;
 }
 .highlight .ge {
+  color: #d0d0d0;
   font-style: italic;
 }
 .highlight .gr {
-  color: #FF0000;
+  color: #d22323;
 }
 .highlight .gh {
-  color: #000080;
+  color: #ffffff;
   font-weight: bold;
 }
 .highlight .gi {
-  color: #00A000;
+  color: #589819;
 }
 .highlight .go {
-  color: #808080;
+  color: #cccccc;
 }
 .highlight .gp {
-  color: #000080;
-  font-weight: bold;
+  color: #aaaaaa;
 }
 .highlight .gs {
+  color: #d0d0d0;
   font-weight: bold;
 }
 .highlight .gu {
-  color: #800080;
-  font-weight: bold;
+  color: #ffffff;
+  text-decoration: underline;
 }
 .highlight .gt {
-  color: #0040D0;
+  color: #d22323;
 }
 .highlight .kc {
-  color: #008000;
+  color: #6ab825;
   font-weight: bold;
 }
 .highlight .kd {
-  color: #008000;
+  color: #6ab825;
   font-weight: bold;
 }
 .highlight .kn {
-  color: #008000;
+  color: #6ab825;
   font-weight: bold;
 }
 .highlight .kp {
-  color: #008000;
+  color: #6ab825;
 }
 .highlight .kr {
-  color: #008000;
+  color: #6ab825;
   font-weight: bold;
 }
 .highlight .kt {
-  color: #B00040;
+  color: #6ab825;
+  font-weight: bold;
+}
+.highlight .ld {
+  color: #d0d0d0;
 }
 .highlight .m {
-  color: #666666;
+  color: #3677a9;
 }
 .highlight .s {
-  color: #BA2121;
+  color: #ed9d13;
 }
 .highlight .na {
-  color: #7D9029;
+  color: #bbbbbb;
 }
 .highlight .nb {
-  color: #008000;
+  color: #24909d;
 }
 .highlight .nc {
-  color: #0000FF;
-  font-weight: bold;
+  color: #447fcf;
+  text-decoration: underline;
 }
 .highlight .no {
-  color: #880000;
+  color: #40ffff;
 }
 .highlight .nd {
-  color: #AA22FF;
+  color: #ffa500;
 }
 .highlight .ni {
-  color: #999999;
-  font-weight: bold;
+  color: #d0d0d0;
 }
 .highlight .ne {
-  color: #D2413A;
-  font-weight: bold;
+  color: #bbbbbb;
 }
 .highlight .nf {
-  color: #0000FF;
+  color: #447fcf;
 }
 .highlight .nl {
-  color: #A0A000;
+  color: #d0d0d0;
 }
 .highlight .nn {
-  color: #0000FF;
-  font-weight: bold;
+  color: #447fcf;
+  text-decoration: underline;
+}
+.highlight .nx {
+  color: #d0d0d0;
+}
+.highlight .py {
+  color: #d0d0d0;
 }
 .highlight .nt {
-  color: #008000;
+  color: #6ab825;
   font-weight: bold;
 }
 .highlight .nv {
-  color: #19177C;
+  color: #40ffff;
 }
 .highlight .ow {
-  color: #AA22FF;
+  color: #6ab825;
   font-weight: bold;
 }
 .highlight .w {
-  color: #bbbbbb;
+  color: #666666;
 }
 .highlight .mf {
-  color: #666666;
+  color: #3677a9;
 }
 .highlight .mh {
-  color: #666666;
+  color: #3677a9;
 }
 .highlight .mi {
-  color: #666666;
+  color: #3677a9;
 }
 .highlight .mo {
-  color: #666666;
+  color: #3677a9;
 }
 .highlight .sb {
-  color: #BA2121;
+  color: #ed9d13;
 }
 .highlight .sc {
-  color: #BA2121;
+  color: #ed9d13;
 }
 .highlight .sd {
-  color: #BA2121;
-  font-style: italic;
+  color: #ed9d13;
 }
 .highlight .s2 {
-  color: #BA2121;
+  color: #ed9d13;
 }
 .highlight .se {
-  color: #BB6622;
-  font-weight: bold;
+  color: #ed9d13;
 }
 .highlight .sh {
-  color: #BA2121;
+  color: #ed9d13;
 }
 .highlight .si {
-  color: #BB6688;
-  font-weight: bold;
+  color: #ed9d13;
 }
 .highlight .sx {
-  color: #008000;
+  color: #ffa500;
 }
 .highlight .sr {
-  color: #BB6688;
+  color: #ed9d13;
 }
 .highlight .s1 {
-  color: #BA2121;
+  color: #ed9d13;
 }
 .highlight .ss {
-  color: #19177C;
+  color: #ed9d13;
 }
 .highlight .bp {
-  color: #008000;
+  color: #24909d;
 }
 .highlight .vc {
-  color: #19177C;
+  color: #40ffff;
 }
 .highlight .vg {
-  color: #19177C;
+  color: #40ffff;
 }
 .highlight .vi {
-  color: #19177C;
+  color: #40ffff;
 }
 .highlight .il {
-  color: #666666;
+  color: #3677a9;
 }
 
 body.bp {
@@ -795,9 +831,11 @@ body.bp a {
   background-color: #2f3035;
   overflow: auto;
   color: #eee;
+  padding: 5px;
 }
 .two_col #content code {
   font-size: 12px;
-  font-family: 'Courier New','Terminal',monospace;
+  #font-family: 'Courier New','Terminal',monospace;
+  font-family: 'Bitstream Vera Sans Mono', monospace;
   line-height: 14px;
 }
